# cmd/huatuo-bamai/handlers/container.go
@@ -1,63 +1,0 @@
-// Copyright 2025, 2026 The HuaTuo Authors
-//
-// Licensed under the Apache License, Version 2.0 (the "License");
-// you may not use this file except in compliance with the License.
-// You may obtain a copy of the License at
-//
-// http://www.apache.org/licenses/LICENSE-2.0
-//
-// Unless required by applicable law or agreed to in writing, software
-// distributed under the License is distributed on an "AS IS" BASIS,
-// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-// See the License for the specific language governing permissions and
-// limitations under the License.
-
-package handlers
-
-import (
-	"net/http"
-
-	v1 "huatuo-bamai/apis/v1"
-	"huatuo-bamai/internal/pod"
-	"huatuo-bamai/internal/server"
-	"huatuo-bamai/internal/server/response"
-)
-
-type ContainerHandler struct {
-	Handlers []server.Route
-}
-
-type ContainersJSONReq struct {
-	ContainerID string `form:"container_id" binding:"omitempty,alphanum,len=64"`
-}
-
-func NewContainerHandler() *ContainerHandler {
-	h := &ContainerHandler{}
-	h.Handlers = []server.Route{
-		{Method: http.MethodGet, Path: "/containers/json", Handler: h.list},
-	}
-	return h
-}
-
-func (h *ContainerHandler) list(ctx *server.Context) error {
-	req := &ContainersJSONReq{}
-	if err := ctx.ShouldBindQuery(req); err != nil {
-		return response.ErrInvalidRequest.WithMessage(err.Error())
-	}
-
-	all, err := pod.Containers()
-	if err != nil {
-		return response.NewAPIError(v1.ErrorCodeInternal, err.Error())
-	}
-
-	resp := make([]*pod.Container, 0, len(all))
-	for _, container := range all {
-		if req.ContainerID != "" && req.ContainerID != container.ID {
-			continue
-		}
-		resp = append(resp, container)
-	}
-
-	response.Success(ctx, resp)
-	return nil
-}
